restructure documentation and add graphic for storage format [skip ci]